# market-data

./: .env.example  .gitignore  calculate_ytm.py  fetch_financial_data.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: quarterly-report.yml
application/: asset_lister.py  bond_analyzer.py  irr_analyzer.py
config/: settings.py
domain/: boncer_calculator.py  cer_adjustment.py  financial_math.py
gateway/: bcra_connector.py  ppi_api_connector.py
services/: bcra_service.py  bonistas_service.py  carry_trade_service.py  cer_service.py  data912_service.py  ecovalores_service.py  irr_service.py  ppi_service.py
src/application/: run_tirs_calculation.py
src/calculators/: metric_extractor.py
src/config/: settings.py
src/data/: cashflows.csv  tirs.csv
src/domain/: asset_types.py  financial_math.py  metric_templates.py
src/gateway/: bcra_connector.py  puentenet_connector.py  puentenet_fetcher.py  stockanalysis_connector.py  stockanalysis_metrics_map.py
src/services/: bcra_service.py  financial_data_service.py
src/utils/: helpers.py  plotter.py  report_formatter.py  sheets_helper.py
utils/: helpers.py  irr_plotter.py  plotter.py
