[project]
name = "market-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camelot-py>=1.0.0",
    "colorama>=0.4.6",
    "ghostscript>=0.8.1",
    "matplotlib>=3.10.3",
    "pandas>=1.3.0",
    "pdfplumber>=0.7.0",
    "ppi-client>=1.2.4",
    "pynvim>=0.5.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "stockdex>=0.5.0",
    "tabulate>=0.9.0",
]
